[package]
name = "linalg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_svg = "0.12.0"
lyon_tessellation = "1"
lyon_algorithms = "1"
svgtypes = "0.13.0"
bevy_prototype_lyon = "0.10.0"

[dev-dependencies]
bevy = { version = "0.12", default-features = false, features = ["x11", "bevy_asset"] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy),
# but not for our code
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
